--- a/AbkarFE/src/components/login-signup/style/main.scss
+++ b/AbkarFE/src/components/login-signup/style/main.scss
@@ -12,3 +12,5 @@
 @use "./form";
 @use "../../Dashboard/style/sidebar";
 @use "../../Dashboard/style/header";
+@use "../../Dashboard/style/table";
+@use "../../Dashboard/style/deleteItem";
