--- a/AbkarFE/src/components/login-signup/style/main.scss
+++ b/AbkarFE/src/components/login-signup/style/main.scss
@@ -14,3 +14,8 @@
 @use "../../Dashboard/style/header";
 @use "../../Dashboard/style/table";
 @use "../../Dashboard/style/deleteItem";
+@use "../../Dashboard/style/editItem";
+@use "../../Dashboard/style/addVideo";
+@use "../../Dashboard/style/addEssay";
+@use "../../Dashboard/style/addTest";
+@use "../../Dashboard/style/question";
