--- a/AbkarFE/src/components/Dashboard/style/_sidebar.scss
+++ b/AbkarFE/src/components/Dashboard/style/_sidebar.scss
@@ -44,6 +44,10 @@
         a {
           text-decoration: none;
           padding: 25px;
+
+          &:hover {
+            background-color: #ffefa3;
+          }
         }
 
         a.active {
