--- a/AbkarFE/src/components/Dashboard/style/_deleteItem.scss
+++ b/AbkarFE/src/components/Dashboard/style/_deleteItem.scss
@@ -21,7 +21,6 @@
       justify-content: space-between;
       background: #ffc700;
       height: 48px;
-      padding: 8px 24px;
 
       > div {
         color: #fff;
@@ -32,11 +31,16 @@
         font-weight: 500;
         line-height: 26px;
         letter-spacing: -0.408px;
+        padding: 10px;
       }
 
       button {
         background-color: transparent;
         border: none;
+
+        &:hover {
+          background-color: #ff5f84;
+        }
       }
     }
 
@@ -57,7 +61,7 @@
       }
       .btns {
         display: flex;
-        gap: 10px;
+        gap: 32px;
         justify-content: center;
         padding: 0;
 
