--- a/AbkarFE/src/components/Dashboard/style/_editItem.scss
+++ b/AbkarFE/src/components/Dashboard/style/_editItem.scss
@@ -20,7 +20,6 @@
       justify-content: space-between;
       background: #ffc700;
       height: 48px;
-      padding: 8px 24px;
 
       > div {
         color: #fff;
@@ -31,28 +30,32 @@
         font-weight: 500;
         line-height: 26px;
         letter-spacing: -0.408px;
+        padding: 10px;
       }
 
       button {
         background-color: transparent;
         border: none;
+
+        &:hover {
+          background-color: #ff5f84;
+        }
       }
     }
 
     &__body {
       background-color: #fffaed;
-      height: 280px;
+      height: 332px;
 
       form {
         padding: 14px 30px;
-        height: 190px;
+        height: 245px;
 
         > div {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-block: 10px;
-
+          margin-block: 24px;
           label {
             color: var(--stroke, #000);
             text-align: center;
@@ -67,7 +70,7 @@
           input {
             background: transparent;
             border: 2px solid #d2d2d2;
-            width: 423px;
+            width: 441px;
             height: 48px;
           }
         }
@@ -75,7 +78,7 @@
 
       .btns {
         display: flex;
-        gap: 10px;
+        gap: 32px;
         justify-content: center;
         padding: 0;
         margin-top: 25px;
@@ -135,7 +138,6 @@
       justify-content: space-between;
       background: #ffc700;
       height: 48px;
-      padding: 8px 24px;
 
       > div {
         color: #fff;
@@ -146,27 +148,32 @@
         font-weight: 500;
         line-height: 26px;
         letter-spacing: -0.408px;
+        padding: 10px;
       }
 
       button {
         background-color: transparent;
         border: none;
+
+        &:hover {
+          background-color: #ff5f84;
+        }
       }
     }
 
     &__body {
       background-color: #fffaed;
-      height: 218px;
+      height: 274px;
 
       form {
         padding: 14px 30px;
-        height: 160px;
+        height: 196px;
 
         > div {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-block: 10px;
+          margin-block: 24px;
 
           label {
             color: var(--stroke, #000);
@@ -182,7 +189,7 @@
           input {
             background: transparent;
             border: 2px solid #d2d2d2;
-            width: 423px;
+            width: 460px;
             height: 48px;
           }
         }
@@ -190,7 +197,7 @@
 
       .btns {
         display: flex;
-        gap: 10px;
+        gap: 32px;
         justify-content: center;
         padding: 0;
 
@@ -249,7 +256,6 @@
       justify-content: space-between;
       background: #ffc700;
       height: 48px;
-      padding: 8px 24px;
 
       > div {
         color: #fff;
@@ -260,27 +266,32 @@
         font-weight: 500;
         line-height: 26px;
         letter-spacing: -0.408px;
+        padding: 10px;
       }
 
       button {
         background-color: transparent;
         border: none;
+
+        &:hover {
+          background-color: #ff5f84;
+        }
       }
     }
 
     &__body {
       background-color: #fffaed;
-      height: 170px;
+      height: 209px;
 
       form {
         padding: 14px 30px;
-        height: 110px;
+        height: 128px;
 
         > div {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          margin-block: 10px;
+          margin-block: 20px;
 
           label {
             color: var(--stroke, #000);
@@ -296,7 +307,7 @@
           input {
             background: transparent;
             border: 2px solid #d2d2d2;
-            width: 423px;
+            width: 442px;
             height: 48px;
           }
         }
@@ -304,7 +315,7 @@
 
       .btns {
         display: flex;
-        gap: 10px;
+        gap: 32px;
         justify-content: center;
         padding: 0;
 
