--- a/AbkarFE/src/components/Dashboard/style/_header.scss
+++ b/AbkarFE/src/components/Dashboard/style/_header.scss
@@ -10,4 +10,12 @@
     letter-spacing: -0.408px;
     margin-right: 10px;
   }
+
+  > button {
+    font-family: "Omnes Arabic";
+    margin-left: 20px;
+    border: none;
+    background: transparent;
+    color: white;
+  }
 }
