You can add tests now

--- a/AbkarFE/src/components/login-signup/style/main.css
+++ b/AbkarFE/src/components/login-signup/style/main.css
@@ -1139,6 +1139,9 @@
   background: transparent;
   color: white;
 }
+.Dashboard__header > button:hover {
+  color: red;
+}
 
 .MyTable thead {
   background-color: #fff6cb;
