--- a/AbkarFE/src/components/OnBoard/PageOne/PageOne.module.css
+++ b/AbkarFE/src/components/OnBoard/PageOne/PageOne.module.css
@@ -59,6 +59,7 @@ font-weight: 500;
 line-height: 22px;
 letter-spacing: -0.40799999237060547px;
 padding:0 20px;
+text-align: center;
 
 }
 .settingBtn{
