--- a/AbkarFE/src/components/Quiz/Answers/Answers.module.css
+++ b/AbkarFE/src/components/Quiz/Answers/Answers.module.css
@@ -7,7 +7,7 @@
 	height: 187px;
 }
 
-.image {
+.img {
 	position: absolute;
 	flex-shrink: 0;
 	fill: var(--Background, #fffaed);
@@ -58,99 +58,102 @@
 	transform: translate(-50%, -50%);
 	cursor: pointer;
 }
-/* ----------------------------F-2---------------------------------------  */
-.info {
-	width: 420px;
-	height: 57px;
-	flex-shrink: 0;
-	border-bottom: 2px solid #000;
-	position: relative;
-	stroke-width: 2px;
-	stroke: #000;
-	margin-top: 15px;
+/* F-2  */
+.form_edit {
+	padding-top: 200px;
+	display: flex;
+	justify-content: flex-end;
+	margin-right: 400px;
+	/* margin-left: 400px; */
 }
-.label {
-	position: absolute;
-	width: 100px;
-	height: 53px;
-	flex-shrink: 0;
-	color: var(--Gray-mid, #888);
-	text-align: right;
-	font-family: "Omnes Arabic";
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 500;
-	line-height: 22px; /* 137.5% */
-	letter-spacing: -0.408px;
-	right: 0;
+.form {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: flex-end;
 }
-.input {
-	position: absolute;
-	width: 328px;
-	height: 26px;
-	flex-shrink: 0;
-	text-align: right;
-	background-color: transparent !important;
-	border: none;
+.qbox {
+	/* padding: 5px; */
+	/* text-align: center; */
+	/* margin-top: 173px; */
+	padding: 20px;
+	/* position: absolute; */
+	/* left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%); */
+	width: 70%;
+}
+.qbox1 {
+	padding: 5px;
+	/* text-align: center; */
+
+	padding: 25px;
+	/* position: absolute; */
+	/* left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%); */
+}
+
+.question {
 	color: #000;
+	text-align: right;
+	font-family: "Omnes Arabic Semi Bold";
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: 26px; /* 108.333% */
+	letter-spacing: -0.408px;
+}
+.question p {
+	line-height: 32px;
+}
+.answer {
+	display: flex;
+	gap: 10px;
+	justify-content: flex-end;
+	align-items: center;
+	justify-items: center;
+	color: #000;
+	text-align: right;
 	font-family: "Omnes Arabic Medium";
 	font-size: 24px;
 	font-style: normal;
 	font-weight: 500;
-	line-height: 22px; /* 91.667% */
+	line-height: 26px; /* 108.333% */
 	letter-spacing: -0.408px;
-	bottom: 2px;
-	right: 0;
+	padding: 5px;
 }
-.input:focus {
-	outline: none;
-}
-.eye {
+.label {
+	appearance: none;
 	width: 24px;
 	height: 24px;
-	flex-shrink: 0;
-	position: absolute;
-	bottom: 4px;
-	left: 0;
+	outline: auto;
+	accent-color: #ffd200;
+	border-radius: 34px;
+	border: 3px solid #000;
+	background: #fffaed;
 }
-.eye:hover {
+.label:checked {
+	background: #ffd200;
+}
+.label:hover {
 	cursor: pointer;
 }
+.correct {
+    background-color: lightgreen;
+}
+
+.incorrect {
+    background-color: #ffcccc;
+}
+
+
 .buttons {
-	gap: 20px;
+	gap: 40px;
 	padding: 20px;
 	display: flex;
 	justify-content: flex-end;
-	padding-right: 0;
-	padding-left: 0;
-	position: relative;
-}
-.icons {
-	display: flex;
-	position: absolute;
-	left: 0;
-	top: 15px;
-	gap: 30px;
-}
-.delacc,
-.signout {
-	width: 48px;
-	height: 48px;
-	flex-shrink: 0;
-	stroke-width: 2px;
-	stroke: #000;
-	cursor: pointer;
-}
-.caption {
-	color: #000;
-	text-align: center;
-	font-family: "Omnes Arabic";
-	font-size: 12px;
-	font-style: normal;
-	font-weight: 600;
-	line-height: 22px; /* 183.333% */
-	letter-spacing: -0.408px;
-	margin-bottom: 0;
+	width: 70%;
 }
 .btn1 {
 	width: 112px;
@@ -158,7 +161,8 @@
 	flex-shrink: 0;
 	border-radius: 14px;
 	border: 2px solid #000;
-	background: var(--Red, #ff5f84);
+	background: #00dcea;
+
 	/* Main shadow */
 	box-shadow: 0px 4px 0px 0px #000;
 }
@@ -168,48 +172,70 @@
 	flex-shrink: 0;
 	border-radius: 14px;
 	border: 2px solid #000;
-	background: var(--Green, #1fcc7b);
-	/* Main shadow */
+	background: #f9295a;
+	/*Mainshadow*/
 	box-shadow: 0px 4px 0px 0px #000;
 }
-.btext {
-	padding-top: 5px;
+.btn_text {
 	/* width: 224px;
 	height: 22px; */
 	flex-shrink: 0;
 	color: #fff;
 	text-align: center;
-	font-family: "Omnes Arabic";
+	font-family: "Omnes Arabic Semi Bold";
 	font-size: 32px;
 	font-style: normal;
 	font-weight: 600;
 	line-height: 22px; /* 68.75% */
 	letter-spacing: -0.408px;
-	width: 91px;
+	/* width: 91px; */
 	height: 22px;
 	top: 13px;
 	left: 10px;
+	padding-top: 5px;
 }
-/* ---------------------------Media queries--------------------- */
-@media only screen and (max-width: 500px) {
+/* ---------------------------------------------------------------------  */
+@media only screen and (max-width: 480px) {
 	.arr {
 		width: 36px;
 		height: 36px;
-		left: 7%;
+		left: 5%;
 		margin-right: 3px;
 	}
-	.info {
-		width: 90vw;
+	.content p {
+		font-size: 34px;
+	}
+	.certificate img {
+		width: 250px;
+		height: 200px;
+	}
+	.certificate p {
+		font-size: 34px;
 	}
 	.buttons {
-		flex-direction: column;
-		position: relative;
-		align-items: center;
+		gap: 20px;
 	}
-	.icons {
+}
+@media only screen and (max-width: 300px) {
+	.arr {
+		margin-left: 10px;
+	}
+	.title {
+		font-size: 45px;
+	}
+}
+@media only screen and (max-width: 1200px) {
+	.form_edit {
+		padding-top: 200px;
+		/* width: 781px; */
+		/* height: 1112px; */
+		/* direction: rtl; */
 		display: flex;
-		position: inherit;
-		gap: 30px;
-		top: 5px;
+		justify-content: center;
+		margin-right: 0;
+		/* margin-left: 0; */
+	}
+	.form {
+		align-items: center;
 	}
 }
