--- a/AbkarFE/src/components/Quiz/exam/Exam.module.css
+++ b/AbkarFE/src/components/Quiz/exam/Exam.module.css
@@ -81,7 +81,7 @@
 	/* left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%); */
-	width: 70%;
+	/* width: 70%; */
 }
 .qbox1 {
 	padding: 5px;
@@ -95,6 +95,7 @@
 }
 
 .question {
+	direction: rtl;
 	color: #000;
 	text-align: right;
 	font-family: "Omnes Arabic Semi Bold";
