--- a/AbkarFE/src/components/Quiz/certi/ceri.module.css
+++ b/AbkarFE/src/components/Quiz/certi/ceri.module.css
@@ -1,5 +1,7 @@
 .body {
 	background-color: transparent !important;
+	width: 100%;
+	height: 100%;
 }
 .certificate {
 	/* width: 234px;
@@ -8,32 +10,26 @@
 	flex-shrink: 0;
 	/* position: relative; */
 	z-index: 2;
-	width: fit-content; /* أو تحديد عرض محدد */
-	height: fit-content; /* أو تحديد ارتفاع محدد */
-}
-.certificate_img {
-	/* position: absolute; */
-	top: 13px;
-	left: 34px;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+
+}
+.certificate_img {
+	position: relative;
+	width: 100vw;
+	height: 100%;
+	object-fit:cover;
 	pointer-events: none;
 }
 .certificate_text {
-	width: 220px;
 	height: 41.17px;
-	top: 401px;
-	left: 610px;
 	font-family: "Omnes Arabic Semi Bold";
-	font-size: 23px;
+	font-size: 48px;
 	font-weight: 600;
-	line-height: 26px;
-	letter-spacing: -0.40799999237060547px;
 	text-align: center;
-	/* position: absolute; */
+	position: absolute;
 	z-index: 3;
 	left: 50%;
-	top: 63%;
+	top: 85%;
 	transform: translate(-50%, -50%);
 }
